--- a/onmReport/sec/acknowlegement.tex
+++ b/onmReport/sec/acknowlegement.tex
@@ -1,3 +1,7 @@
 \section*{Acknowlegement}
 \addcontentsline{toc}{section}{Acknowledgement}
+We would like to express our sincere gratitude to the \textbf{Department of Electronics and Computer Engineering} of IOE, Pulchowk Campus for providing us opportunity to understand the core concept on organization and management in real-life scenario via \textbf{"case study"}.\\
+Besides we are highly indebeted to our teacher \textbf{Prof. Shyam Krishna Joshi} for providing valueable suggestion, guidance, motivation and education regarding the case study and the concept of Organization and Managment and it's importance.It would not have been possible for us to complete this case study without his persistent supervision, advice and direction.\\
+Morever, we are also thankful to \textbf{Versend Technologies} for giving us the opportunity to understand about the management and administrative part of it's organization. We sincerely appreciate the support and direction of all those people who have given us input to learn more about topics related to this case study.\\
+Finally we would also like to thank all of our friends and people who have directly or indirectly assisted us for this case study.\\
 \cleardoublepage
