--- a/onmReport/sec/leadership.tex
+++ b/onmReport/sec/leadership.tex
@@ -31,9 +31,10 @@ organizational goals. The following points justify the importance of leadership 
 \item Co-ordination
 \end{itemize}
 Verscend Information Technologies promotes effective leadership. The organization believes in a leader who:
-is committed on personal and professional front, and is responsible. He must be a role model for other
-staffs.
 \begin{itemize}
+\item
+Is committed on personal and professional front, and is responsible. He must be a role model for other
+staffs.
 \item
 Has the capability to boost up the morale of his/her employees. He/she should motivate them so that
 they are committed to the organization. He/she should be well acquainted with them, have concern for
