--- a/onmReport/sec/organization.tex
+++ b/onmReport/sec/organization.tex
@@ -1,16 +1,7 @@
 \section{Organization}
-Verisk Technologies (previously known as D2Hawkeye) is a software research and development
-center forVerscend Analytics, the parent company based in the USA.Verscend Analytics is a leading data analytics
-provider offering risk assessment services and decision analytics in fields like property/casualty insurance,
-reinsurance, mortgage, financial services, healthcare, government and corporate risk management. As a US
-offshore company,Verscend Information Technologies builds enterprise systems and provide state-of-the-art
-solutions for theVerscend Family of Companies.Verscend Information Technologies is involved in the design,
-development, testing and maintenance of impressive lineup of trend-setting products ofVerscend member
-companies likeVerscend Health, ISO, 3E and other that help customers protect people, property, and financial
-assets in the US and around the world.
-\subsection{History}
+Verscend Technologies, situated at Hattisar Sadak, Kathmandu is a software research and development center for Verscend Analytics, the parent company based in the USA. Verscend Analytics is a leading data analytics provider offering risk assessment services and decision analytics in fields like property/casualty insurance, reinsurance, mortgage, financial services, healthcare, government and corporate risk management. As a US offshore company, VerscendTechnologies builds enterprise systems and provide state-of-the-art solutions for theVerscend Family of Companies. Verscend Information Technologies is involved in the design, development, testing and maintenance of impressive lineup of trend-setting products of Verscend member companies like Verscend Health, ISO, 3E and other that help customers protect people, property, and financial assets in the US and around the world.
 \subsection{Objective}
-The main goal of the company is to cater research and development services toVerscend Analytics. The
+The main goal of the company is to cater research and development services to Verscend Analytics. The
 objectives of the company are:
 \begin{itemize}
 \item To collect and analyze billions of records and draws on vast industry expertise and unique proprietary
@@ -25,12 +16,8 @@ world-class decision support systems.
 The company offers its products and services – to a number of industries to help risk bearing businesses
 understand and manage their risks – which include property/casualty insurance, financial services, healthcare,
 government, and human resources.
-The company’s offerings can be categorized into two major reporting segments – risk assessment and decision
-analytics. The risk assessment business serves customers in property/casualty industry by helping them define,
-measure and manage risk. The decision analytics business serves customers in a variety of industries with tool
-that help them make informed decision about managing their assets and the associated risk in predicting future
-losses, selecting and pricing risk, detecting and preventing fraud and quantifying losses that have already
-happened.
+\subsection{Process}
+The company works on following to provide the effective products and services to it's clients:
 \begin{itemize}
 \item Company Market
 \item P/C Insurance
@@ -42,6 +29,14 @@ happened.
 \item Community Hazard Mitigation
 \item Climate Risk
 \end{itemize}
-\subsection{Process}
 \subsection{Output}
+The services offered by a compnay can be categorized into two major reporting segments :
+\begin{itemize}
+\item Risk assessment:\\The risk assessment business serves customers in property/casualty industry by helping them define,
+measure and manage risk.  
+\item Decision analytics:\\ The decision analytics business serves customers in a variety of industries with tool
+that help them make informed decision about managing their assets and the associated risk in predicting future
+losses, selecting and pricing risk, detecting and preventing fraud and quantifying losses that have already
+happened.
+
 \cleardoublepage
