--- a/onmReport/sec/personnelManagement.tex
+++ b/onmReport/sec/personnelManagement.tex
@@ -1,12 +1,20 @@
 \section{Personnel Management}
 \subsection{Forms of Ownership}
+Forms of Ownership define the type of organization. Generally there are various factors to be considered for defining the forms of ownership. There's no best form of ownership. The best form of ownership depends on the entrepreneurs situation. Evaluation of the characteristics weighing pros and cons had to be done first, then only it can be decided which form suits us the best as the owner.\\
+Verscend Technologies is the \textbf{private company} with the parent company based on New Jersey, USA. It comprises of three family:
+\begin{enumerate}
+\item Verscend Analytics
+\item Verscend Health
+\item Verscend Information
+\end{enumerate}
+Hence, as Verscend is the private company, it is also know as: Verscend Technoloiges Pvt Ltd.
 \subsection{Personnel Policies}
 Personnel policies define the treatment, rights, obligations, and relations of people in an organization. They
 are the blueprints by which the organization runs: the rules and procedures that protect workers and the
 organization from being abused, put them in control of their jobs, and keep them from making errors that will
-hurt the organization or one another. They touch on relationships (staff/staff, staff/administration, etc.),
-expectations (hours worked, schedules, what defines the work of a position), and ways of doing things (who
-gets to use what equipment when, how to arrange a sick day) that affect employees' lives and the running of
+hurt the organization or one another. They touch on relationships \big( staff/staff, staff/administration, etc.\big),
+expectations \big( hours worked, schedules, what defines the work of a position\big), and ways of doing things \big(who
+gets to use what equipment when, how to arrange a sick day \big) that affect employees' lives and the running of
 the organization.
 There are essentially three types of personnel policies:
 \begin{itemize}
@@ -23,34 +31,32 @@ rights and reasons for termination.
 Everyday Procedural Policies: These policies deal with issues that affect the everyday life of the
 worker or volunteer, and the day-to-day operation of the organization. They generally include the
 hours employees are required to be at work, how workers should dress, when they get paid, and issues
-of security as well as guidelines for how things are done in the organization.
-Policies followed byVerscendTechnologies are:
+of security as well as guidelines for how things are done in the organization.\\
+Policies followed by Verscend Technologies are:
 \item
-Training and Orientation: AtVerscendTechnologies, employees, once hired, typically go
+Training and Orientation: At Verscendi Technologies, employees, once hired, typically go
 through an orientation and training process to learn about their new employer and how their job
 function fits into the overall goals of the business. During this time, employees may attend training
 sessions, get assigned a mentor or participate in a virtual training session provided by the company
 such that new employees understand and are well prepared for their new positions.
 \item
-Work Schedule, Breaks and Leave:VerscendTechnologies provides guidelines for when
+Work Schedule, Breaks and Leave: Verscend Technologies provides guidelines for when
 an employee should report to the office for work and when he/she should leave. These policies also
 include the procedures for calling in sick, information on jury duty and how time off for bereavement
 is handled.
 \item
-Salaries and Pay Schedule: Employees atVerscendTechnologies have diverse salaries,
+Salaries and Pay Schedule: Employees at Verscend Technologies have diverse salaries,
 including salary ranges or a salary scale. These policies give employees an idea of how much money
 they can potentially make, if promoted. Employees are paid in monthly basis and have with them
 a
 written documentation that outlines their pay schedules.
 \item
-Performance Reviews and Promotions:VerscendTechnologies has maintained
+Performance Reviews and Promotions:Verscend Technologies has maintained
 performance sheet to monitor the performance of its employees. The performance can be reported from
 supervisor level and by employee themselves. Organizational commitment of the employee is also a
 major factor that is included in the policy which determines the remuneration of the employee. This
 policy also states the fact that when the employee can expect a raise in salary and in what basis.
-\item
-\end{itemize}
-Terminating Employment:VerscendTechnologies also has policies that state how
+\item Terminating Employment:Verscend Technologies also has policies that state how
 employees or employers can terminate employment at the company. The policies also outline how
 much advance notice must be given and in what format, as well as information on severance packages,
 returning company keys and equipment and ending access to company records.
@@ -59,7 +65,7 @@ Manpower can be defined as the sum total of the skills, talents, knowledge, qual
 and the values of the workforce of an organization. Manpower planning, also called as human resource
 planning stands for putting right number of individuals, right kind of individuals, at right place, right time,
 doing the right job they are suitable for.
-InVerscendTechnologies, the following general procedures are followed for manpower planning:
+In VerscendTechnologies, the following general procedures are followed for manpower planning:
 \begin{enumerate}
 \item
  Analyzing of current manpower inventory.
@@ -67,9 +73,9 @@ InVerscendTechnologies, the following general procedures are followed for manpow
  Making future manpower forecasts based on workload analysis, budget and planning analysis, needs
 of experts etc.
 \item
- Developing Employment programs like recruitment, hiring, selections and placements.
+ Devieloping Employment programs like recruitment, hiring, selections and placements.
 \item
- Designing training programs.
+ Desiigning training programs.
 \end{enumerate}
 \subsection{Recruitment and Selection of Manpower}
 Recruitment is the process of acquiring required number and types of individuals necessary to ensure
@@ -90,14 +96,14 @@ the applicant.
 tasks they need to fulfill, policies, rules and so on.
 \item  Finally, the hired employee is assigned jobs.
 \end{enumerate}
-Verisk Information Technologies usually hire employees through internship, Trainee or Direct hire.
+Verscend Technologies usually hire employees through \textbf{Internship, Trainee or Direct hire}.
 \begin{itemize}
-\item Internship:VerscendTechnologies has a provision of paid internship for final year students
+\item Internship: Verscend Technologies has a provision of paid internship for final year students
 pursuing a Bachelor's degree. Every intern is assigned an experienced mentor who will be responsible
 for mentoring of interns throughout the course of internship. High performing interns are offered
 permanent employment.
 
-\item Trainee: Throughout the year,VerscendTechnologies conduct one to three months long
+\item Trainee: Throughout the year,Verscend Technologies conduct one to three months long
 paid trainee programs in multiple batches. This program is ideal for fresh graduates who have “Can
 do” attitude but lack experience. Trainees are provided hands-on training on areas that match both the
 trainee’s as well as the company’s interest. High performing trainees are offered permanent
@@ -114,15 +120,15 @@ capacity, productivity and performance.
 Skill development is a training and development that the employer provides to his/her employees in the
 workplace. It is often construed that only training that is provided by an outside training provider falls within
 the definition of skill development. The definition also includes on-the-job training provided by the employer.
-InVerscendTechnologies, the initial recruited employees or the interns are given special intensive
+In VerscendTechnologies, the initial recruited employees or the interns are given special intensive
 trainings to enhance their skills and knowledge to meet the organization’s goals.
 Some of the techniques are specified below:
 \begin{enumerate}
-\itemize Training is given to new recruitments for specific period under the direct supervision.
-\itemize Senior employees are also given intensive international trainings.
-\itemize Challenging works are provided to the employees to make them more interested in their work.
-\itemize Special opportunities are provided to cope with rapid changes in project environment.
-\itemize New skills are developed by providing trainings on new technologies.
+\item Training is given to new recruitments for specific period under the direct supervision.
+\item Senior employees are also given intensive international trainings.
+\item Challenging works are provided to the employees to make them more interested in their work.
+\item Special opportunities are provided to cope with rapid changes in project environment.
+\item New skills are developed by providing trainings on new technologies.
 \end{enumerate}
 \subsection{Job Evaluation}
 Job evaluation is a systematic way of determining the value of a job in relation to other jobs in the organization.
@@ -143,6 +149,8 @@ clients, economic worth of projects and all workers working within the company. 
 workers are assigned on a categorized basis; Experienced employee may go for high value project, the trainees
 and new workers may be assigned small project.
 \subsection{Merit Rating}
+Every four months, the performance of individuals is evaluated and rewarded. 20\% of the employees are given
+best awards, 70\% of the deserving employees are given good increments.
 \subsection{Wages and Incentives}
 A wage is a monetary remuneration computed on hourly, daily, weekly basis or per standard output paid for
 the service of labor. If paid in weekly or monthly basis, wage is called Salary. Wages and Salary include the
@@ -156,7 +164,6 @@ Information Technologies commits to provide sound and competitive salary to its 
 particularly based on skills and capabilities of the employees rather than the position of the job. Even though
 they have pre-defined specification of the payments for different jobs, deserving employees are provided with
 higher payment.
-Every four months, the performance of individuals is evaluated and rewarded. 20% of the employees are given
-best awards, 70% of the deserving employees are given good increments. In addition to that, employees are
+ In addition to that, employees are
 provided with free transportation and free medical facilities.
 \cleardoublepage
