--- a/onmReport/sec/mis.tex
+++ b/onmReport/sec/mis.tex
@@ -7,19 +7,19 @@ the automation of these clerical tasks with an aid of computer. Hence, MIS helps
 employee as well as make any kinds of decisions based on the previous records. A good MIS gives managers
 information on past and present activities and make some projections about future activities based on the past
 experience. Similarly, MIS helps managers perform basic functions of the management - planning, organizing,
-directing and controlling.
+directing and controlling.\\
 In the context of Verscend Technologies, the MIS was engaged with the following tasks in the
 organization:
 \begin{enumerate}
-\item Digital Attendance of Each Employee: There was a digital attendance system installed at the entrance of
+\item Digital Attendance of Each Employee: \\There was a digital attendance system installed at the entrance of
 the company. It would give a card to every people who would enter the building and would directly make
 an entry on the digital attendance sheet of the system.
-\item Performance Evaluation of Each Employee: There was a software installed on the MIS which would
+\item Performance Evaluation of Each Employee:\\ There was a software installed on the MIS which would
 assess the work performed by each employee of the organization. It applied complicated algorithms and
 different statistical measures in order to evaluate the work performed by the individuals and then rated each
 employee on the scale of 0-5. Managers would rely on this software for the progress and the job evaluation
 of the employees under them.
-\item Automated Information Provision: There was a system which would check the mails automatically and
+\item Automated Information Provision:\\ There was a system which would check the mails automatically and
 would redirect to the relevant personnel in the organization. Similarly, the system would convey any
 message to any employee automatically without any human maneuver.
 \end{enumerate}
