--- a/onmReport/sec/motivation.tex
+++ b/onmReport/sec/motivation.tex
@@ -6,9 +6,9 @@ satisfaction, team work, etc. One of the most important functions of management 
 amongst the employees to perform in the best of their abilities. Therefore the role of a leader is to arouse
 interest in performance of employees in their jobs. The process of motivation consists of three stages:
 \begin{enumerate}
-\item1 A felt need or drive
-\item2 A stimulus in which needs have to be aroused
-\item3 When needs are satisfied, the satisfaction or accomplishment of goals.
+\item A felt need or drive
+\item A stimulus in which needs have to be aroused
+\item When needs are satisfied, the satisfaction or accomplishment of goals.
 \end{enumerate}
 Therefore, we can say that motivation is a psychological phenomenon which means that needs and wants of
 individuals have to be tackled by framing an incentive plan.
@@ -25,26 +25,26 @@ of the employees. The employees will collectively contribute to organizational g
 motivated. Below mentioned are some of ways Verscend Technologies has undertaken to keep its
 workplace motivated.
 \begin{itemize}
-\item  Giving the employees learning opportunities: Employees should consistently learn new skills in the
+\item  Giving the employees learning opportunities:\\ Employees should consistently learn new skills in the
 job. Continuing learning is the best way to remain employable. So,Verscend Technologies
 provides several opportunities to its employees to develop their skills and competencies and to make
 best use of their skills. It also links the staff goals with the organizational goals.
-\item  Develop and encourage creativity: The company encourages its staff to develop creativity skills so
+\item  Develop and encourage creativity: \\ The company encourages its staff to develop creativity skills so
 as to solve organizational problems. It gives employees time and resources for developing creativity.
 It also lets them hold constant brainstorming sessions and invites ideas and suggestions from the staff.
-\item  Respecting team: The company respect not only the employees’ rights to share and express their
+\item  Respecting team: \\ The company respect not only the employees’ rights to share and express their
 views and to be themselves, but also their valuable time. It makes the staff feel that they are respected
 not just as an employee/worker but also as an individual.
-\item  Provides the employees with certain benefits: The company gives its staff ample amount of financial
+\item  Provides the employees with certain benefits: \\ The company gives its staff ample amount of financial
 and other benefits. It offers them bonuses, pay them for overtime,
 and give them health and family insurance benefits. It ensures that they get breaks from work and lets
 them enjoy vacations and holidays.
-\item  Acknowledge staff on their achievements: A pat on the back, some words of praise, and a note of
+\item  Acknowledge staff on their achievements: \\ A pat on the back, some words of praise, and a note of
 credit to the employee/staff member at personal level with some form of broad publicity can motivate
 the staff a lot. So,Verscend Technologies makes sure to acknowledge its staff's great
 achievements. It not only acknowledges the employee with highest contribution, but also acknowledge
 the employee who meets and over exceeds the targets.
-\item  Ensuring that employees are interested in their jobs: This means assigning tasks that are
+\item  Ensuring that employees are interested in their jobs: \\ This means assigning tasks that are
 meaningful and somewhat challenging to person. So,Verscend Technologies makes sure
 that its employees are satisfied with the type of job they are doing.
 \end{itemize}
