--- a/onmReport/onmReport.tex
+++ b/onmReport/onmReport.tex
@@ -12,6 +12,7 @@
 	}
 	\input{sec/organization}
 	\input{sec/structure}
+	\input{sec/formsofOwnership}
 	\input{sec/personnelManagement}
 	\input{sec/motivation}
 	\input{sec/leadership}
