--- a/onmReport/sec/conclusion.tex
+++ b/onmReport/sec/conclusion.tex
@@ -6,7 +6,7 @@ services, healthcare, government, and human resources. The company has well-stru
 hierarchy, work-flow, personnel policies, recruitment procedure and mechanisms to maintain employee
 motivation and growth clearly defined and well thought. The company provides competitive salaries and
 incentives and belongs to the category of top paying companies in the Kathmandu city.
-The case study at Verscend Information Technologies made us clear on many aspects of organization
+The case study at Verscend Technologies made us clear on many aspects of organization
 management and a lot about the organization background, structure and relationship, and financial and
 personal management processes of the company.
 This Case Study not only gave us knowledge about the organization and management of Verscend Information
