--- a/onmReport/sec/personnelManagement.tex
+++ b/onmReport/sec/personnelManagement.tex
@@ -1,13 +1,4 @@
 \section{Personnel Management}
-\subsection{Forms of Ownership}
-Forms of Ownership define the type of organization. Generally there are various factors to be considered for defining the forms of ownership. There's no best form of ownership. The best form of ownership depends on the entrepreneurs situation. Evaluation of the characteristics weighing pros and cons had to be done first, then only it can be decided which form suits us the best as the owner.\\
-Verscend Technologies is the \textbf{private company} with the parent company based on New Jersey, USA. It comprises of three family:
-\begin{enumerate}
-\item Verscend Analytics
-\item Verscend Health
-\item Verscend Information
-\end{enumerate}
-Hence, as Verscend is the private company, it is also know as: Verscend Technoloiges Pvt Ltd.
 \subsection{Personnel Policies}
 Personnel policies define the treatment, rights, obligations, and relations of people in an organization. They
 are the blueprints by which the organization runs: the rules and procedures that protect workers and the
@@ -143,10 +134,13 @@ The main objectives of job evaluation are:
 \item  To eliminate the causes of dissatisfaction and conflicts among employees.
 \end{enumerate}
 For projects with high value, time allocation is comparatively larger and more workers are employed at the
-company. Jobs which can boost the status of the company are given comparatively more attention. The job
-evaluation model ofVerscendTechnologies includes the level of bids won by company, status of
-clients, economic worth of projects and all workers working within the company. As per the worth of a project,
-workers are assigned on a categorized basis; Experienced employee may go for high value project, the trainees
+company. Jobs which can boost the status of the company are given comparatively more attention.\\
+The job evaluation model of VerscendTechnologies includes:
+\begin{itemize}
+	\item the level of bids won by company
+	\item status of clients 
+	\item economic worth of projects and all workers working within the company.\\
+As per the worth of a project,workers are assigned on a categorized basis; Experienced employee may go for high value project, the trainees
 and new workers may be assigned small project.
 \subsection{Merit Rating}
 Every four months, the performance of individuals is evaluated and rewarded. 20\% of the employees are given
@@ -159,8 +153,8 @@ pay, bonuses and other benefits.
 An incentive is something that motivates an individual to perform certain action. The motive of incentive
 programs is to increase the productivity of the employees and to help them enjoy work. Incentives not
 necessarily mean just financial incentives, therefore, employees can be motivated through other non-monetary
-incentives as well. Raise in pay, bonuses, rewards help employees be more motivated to their work.Verscend
-Information Technologies commits to provide sound and competitive salary to its employees. The salary is
+incentives as well. Raise in pay, bonuses, rewards help employees be more motivated to their work.
+\\ Verscend Information Technologies commits to provide sound and competitive salary to its employees. The salary is
 particularly based on skills and capabilities of the employees rather than the position of the job. Even though
 they have pre-defined specification of the payments for different jobs, deserving employees are provided with
 higher payment.
