--- a/onmReport/sec/suggestion.tex
+++ b/onmReport/sec/suggestion.tex
@@ -1,13 +1,13 @@
-\section{Suggestions And Recommendations}
-The recommendations to improvise the organization are specified below:
+\section{Suggestions/ Recommendations}
+The suggestions/recommendations to improvise the organization are specified below:
 \begin{itemize}
-\item If the priority are given to local clients and local projects, it can help develop various related sectors
-within Nepal.
 \item  There should have been a name board for proper identification of the organization.
-\item  There should be an easier way of taking leaves like forwarding the leave application to the higher level
-all at once without redundancy.
 \item
 Both print and web media should be used for advertising events so that larger population could be
 reached effectively.
+\item If the priority are given to local clients and local projects, it can help develop various related sectors
+within Nepal.
+\item  There should be an easier way of taking leaves like forwarding the leave application to the higher level
+all at once without redundancy.
 \end{itemize}
 \cleardoublepage
