--- a/onmReport/sec/titlepage.tex
+++ b/onmReport/sec/titlepage.tex
@@ -9,10 +9,10 @@
 INSTITUE OF ENGINEERING\\
 PULCHOWK CAMPUS,LALITPUR\\}}
 \vspace{10mm}
-\textbf{ Case Study Report On}\\
+\textbf{ Case Study Report On\\
 Organization And Management\\
 At\\
-Verscend Technologies\\
+Verscend Technologies}\\
 \vspace{10mm}
 \textbf{Submitted By:}\\
 Abhishek Poudal(070-BCT-502)\\
@@ -25,6 +25,7 @@ Sabin Silwal(070-BCT-532)\\
 \vspace{10mm}
 \textbf{Submitted To:}\\
 Prof. Shyam Krishna Joshi\\
+Department of Science And Humanities\\
 \vspace{10mm}
 \vfill
 \today
