--- a/onmReport/sec/organization.tex
+++ b/onmReport/sec/organization.tex
@@ -1,5 +1,8 @@
 \section{Organization}
+\subsection{Introduction}
 Verscend Technologies, situated at Hattisar Sadak, Kathmandu is a software research and development center for Verscend Analytics, the parent company based in the USA. Verscend Analytics is a leading data analytics provider offering risk assessment services and decision analytics in fields like property/casualty insurance, reinsurance, mortgage, financial services, healthcare, government and corporate risk management. As a US offshore company, VerscendTechnologies builds enterprise systems and provide state-of-the-art solutions for theVerscend Family of Companies. Verscend Information Technologies is involved in the design, development, testing and maintenance of impressive lineup of trend-setting products of Verscend member companies like Verscend Health, ISO, 3E and other that help customers protect people, property, and financial assets in the US and around the world.
+\subsection{History}
+In 2008, Verscend Analytics was established to serve as the parent holdling company of ISO(Insurance Service Office). ISO was created in 1971 through the consolidation of various, regional, and national rating bureaus for various lines of property/casualty insurance. ISO helps insurers with product developement, underwriting and rating.
 \subsection{Objective}
 The main goal of the company is to cater research and development services to Verscend Analytics. The
 objectives of the company are:
