--- a/onmReport/onmReport.tex
+++ b/onmReport/onmReport.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt, a4paper]{article}
 \usepackage{graphicx}
+\usepackage{mathptmx}
 \begin{document}
 	\pagenumbering{gobble}
 	\input{sec/titlepage}
