--- a/onmReport/sec/marketing.tex
+++ b/onmReport/sec/marketing.tex
@@ -1,3 +1,13 @@
 \section{Marketing}
+Marketing is business strategy/plan to achieve certain marketing objectives.It may relate to becoming the market leader by delighting customers. The strategic plan therefore is the detailed planning involving marketing research and then developing a marketing mix to delight customers. Every organization needs to have clear marketing objectives and major route to achieving organisational goals will depend on strategy. It is important, therefore to be clear about the difference between strategy and tatics.It is the tool used by the marketing department. The marketing department will set out to identify the most appropriate techniques to employ in order to make profits. The marketing techniques inlcude public relations, trade and consumer promotion, point of sale materials, editoral, publicity and sales literature.It is basically employed at three stages:
+\begin{enumerate}
+\item Stage 1:\\
+Market Research
+\item Stage 2:\\
+Developing the marketing mix.
+\item Stage 3: \\
+Evaluation of marketing effectiveness.
+\end{enumerate}
+Marketing plan of Verscend Technologies is also based on the similar conceptand all of the operation are handled within the marketing department regarding the research and marketing effectiveness.
 \cleardoublepage
 
