--- a/onmReport/sec/marketing.tex
+++ b/onmReport/sec/marketing.tex
@@ -8,6 +8,6 @@ Developing the marketing mix.
 \item Stage 3: \\
 Evaluation of marketing effectiveness.
 \end{enumerate}
-Marketing plan of Verscend Technologies is also based on the similar conceptand all of the operation are handled within the marketing department regarding the research and marketing effectiveness.
+Marketing plan of Verscend Technologies is also based on the similar conceptand all of the operation are handled within the marketing department regarding the research and marketing effectiveness as well as marketing strategies.
 \cleardoublepage
 
