--- a/onmReport/sec/acknowlegement.tex
+++ b/onmReport/sec/acknowlegement.tex
@@ -1,4 +1,4 @@
-\section*{Acknowlegement}
+\section*{Acknowledgement}
 \addcontentsline{toc}{section}{Acknowledgement}
 We would like to express our sincere gratitude to the \textbf{Department of Electronics and Computer Engineering} of IOE, Pulchowk Campus for providing us opportunity to understand the core concept on organization and management in real-life scenario via \textbf{"case study"}.\\
 Besides we are highly indebeted to our teacher \textbf{Prof. Shyam Krishna Joshi} for providing valueable suggestion, guidance, motivation and education regarding the case study and the concept of Organization and Managment and it's importance.It would not have been possible for us to complete this case study without his persistent supervision, advice and direction.\\
