--- a/onmReport/sec/organization.tex
+++ b/onmReport/sec/organization.tex
@@ -1,8 +1,9 @@
 \section{Organization}
 \subsection{Introduction}
-Verscend Technologies, situated at Hattisar Sadak, Kathmandu is a software research and development center for Verscend Analytics, the parent company based in the USA. Verscend Analytics is a leading data analytics provider offering risk assessment services and decision analytics in fields like property/casualty insurance, reinsurance, mortgage, financial services, healthcare, government and corporate risk management. As a US offshore company, VerscendTechnologies builds enterprise systems and provide state-of-the-art solutions for theVerscend Family of Companies. Verscend Information Technologies is involved in the design, development, testing and maintenance of impressive lineup of trend-setting products of Verscend member companies like Verscend Health, ISO, 3E and other that help customers protect people, property, and financial assets in the US and around the world.
+Verscend Technologies, situated at Hattisar Sadak, Kathmandu is a software research and development center for Verscend Analytics, the parent company based in the USA. Verscend Analytics is a leading data analytics provider offering risk assessment services and decision analytics in fields like property/casualty insurance, reinsurance, mortgage, financial services, healthcare, government and corporate risk management. \\
+As a US offshore company, Verscend Technologies builds enterprise systems and provide state-of-the-art solutions for the Verscend Family of Companies. Verscend Technologies is involved in the design, development, testing and maintenance of impressive lineup of trend-setting products of Verscend member companies like Verscend Health, ISO, 3E and other that help customers protect people, property, and financial assets in the US and around the world.
 \subsection{History}
-In 2008, Verscend Analytics was established to serve as the parent holdling company of ISO(Insurance Service Office). ISO was created in 1971 through the consolidation of various, regional, and national rating bureaus for various lines of property/casualty insurance. ISO helps insurers with product developement, underwriting and rating.
+In 2008, Verscend Analytics was established to serve as the parent holding company of ISO(Insurance Service Office). ISO was created in 1971 through the consolidation of various, regional, and national rating bureaus for various lines of property/casualty insurance. ISO helps insurers with product developement, underwriting and rating.
 \subsection{Objective}
 The main goal of the company is to cater research and development services to Verscend Analytics. The
 objectives of the company are:
@@ -13,8 +14,7 @@ datasets
 insurance coverage, catastrophe and many other fields
 \item To design and develop top notch applications.
 \item To establish and maintain robust database of information on losses, claims, costs, etc. that supplements
-world-class decision support systems.
-\end{itemize}
+world-class decision support system.\end{itemize}
 \subsection{Input}
 The company offers its products and services – to a number of industries to help risk bearing businesses
 understand and manage their risks – which include property/casualty insurance, financial services, healthcare,
@@ -25,9 +25,6 @@ The company works on following to provide the effective products and services to
 \item Company Market
 \item P/C Insurance
 \item Financial Services
-\item Supply Chain
-\item HR Departments
-\item Retail
 \item Commercial Real Estate
 \item Community Hazard Mitigation
 \item Climate Risk
@@ -42,4 +39,5 @@ that help them make informed decision about managing their assets and the associ
 losses, selecting and pricing risk, detecting and preventing fraud and quantifying losses that have already
 happened.
 
+\end{itemize}
 \cleardoublepage
