--- a/onmReport/sec/personnelManagement.tex
+++ b/onmReport/sec/personnelManagement.tex
@@ -51,6 +51,7 @@ policy also states the fact that when the employee can expect a raise in salary 
 employees or employers can terminate employment at the company. The policies also outline how
 much advance notice must be given and in what format, as well as information on severance packages,
 returning company keys and equipment and ending access to company records.
+\end{itemize}
 \subsection{Manpower Planning}
 Manpower can be defined as the sum total of the skills, talents, knowledge, qualifications, creativity, ability
 and the values of the workforce of an organization. Manpower planning, also called as human resource
@@ -142,6 +143,7 @@ The job evaluation model of VerscendTechnologies includes:
 	\item economic worth of projects and all workers working within the company.\\
 As per the worth of a project,workers are assigned on a categorized basis; Experienced employee may go for high value project, the trainees
 and new workers may be assigned small project.
+\end{itemize}
 \subsection{Merit Rating}
 Every four months, the performance of individuals is evaluated and rewarded. 20\% of the employees are given
 best awards, 70\% of the deserving employees are given good increments.
@@ -161,3 +163,4 @@ higher payment.
  In addition to that, employees are
 provided with free transportation and free medical facilities.
 \cleardoublepage
+
