--- a/onmReport/sec/titlepage.tex
+++ b/onmReport/sec/titlepage.tex
@@ -15,12 +15,12 @@ At\\
 Verscend Technologies}\\
 \vspace{10mm}
 \textbf{Submitted By:}\\
-Abhishek Poudal(070-BCT-502)\\
-Brihat Ratna Bajacharya(070-BCT-513)\\
+Abhishek Poudel(070-BCT-502)\\
+Brihat Ratna Bajracharya(070-BCT-513)\\
 Kshitiz Shrestha(070-BCT-518)\\
-Miran Ghimire(070-BCT-521\\
-Nabin Bhattarai(070-BCT-522\\
-Pabin Raj Luitel(070-BCT-523\\
+Miran Ghimire(070-BCT-521)\\
+Nabin Bhattarai(070-BCT-522)\\
+Pabin Raj Luitel(070-BCT-523)\\
 Sabin Silwal(070-BCT-532)\\
 \vspace{10mm}
 \textbf{Submitted To:}\\
