initial outline of progress report

--- a/majorProjectProposal/proposal.tex
+++ b/majorProjectProposal/proposal.tex
@@ -336,3 +336,8 @@ Thus after the completion of the project, we will be able to make a recommendati
 	\\\texttt{https://developers.facebook.com/docs/graph-api}
 \end{thebibliography}
 \end{document}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: t
+%%% End:
