--- a/onmReport/sec/conclusion.tex
+++ b/onmReport/sec/conclusion.tex
@@ -1,5 +1,5 @@
 \section{Conclusion}
-Verscend Technologies, a software research and development center for Verscend Analytics is well
+Verscend Technologies, being situated at Hattisar Sadak, Kathmandu is a software research and development center for Verscend Analytics is well
 defined and established company offering its products and services to a number of industries to help risk
 bearing businesses understand and manage their risks which include property/casualty insurance, financial
 services, healthcare, government, and human resources. The company has well-structured organizational
