--- a/onmReport/sec/personnelManagement.tex
+++ b/onmReport/sec/personnelManagement.tex
@@ -23,9 +23,9 @@ Everyday Procedural Policies: These policies deal with issues that affect the ev
 worker or volunteer, and the day-to-day operation of the organization. They generally include the
 hours employees are required to be at work, how workers should dress, when they get paid, and issues
 of security as well as guidelines for how things are done in the organization.\\
-Policies followed by Verscend Technologies are:
+\\Policies followed by Verscend Technologies are:
 \item
-Training and Orientation: At Verscendi Technologies, employees, once hired, typically go
+Training and Orientation: At Verscend Technologies, employees, once hired, typically go
 through an orientation and training process to learn about their new employer and how their job
 function fits into the overall goals of the business. During this time, employees may attend training
 sessions, get assigned a mentor or participate in a virtual training session provided by the company
@@ -57,7 +57,7 @@ Manpower can be defined as the sum total of the skills, talents, knowledge, qual
 and the values of the workforce of an organization. Manpower planning, also called as human resource
 planning stands for putting right number of individuals, right kind of individuals, at right place, right time,
 doing the right job they are suitable for.
-In VerscendTechnologies, the following general procedures are followed for manpower planning:
+\\In Verscend Technologies, the following general procedures are followed for manpower planning:
 \begin{enumerate}
 \item
  Analyzing of current manpower inventory.
@@ -71,7 +71,7 @@ of experts etc.
 \end{enumerate}
 \subsection{Recruitment and Selection of Manpower}
 Recruitment is the process of acquiring required number and types of individuals necessary to ensure
-continued progress and operation of the organization.VerscendTechnologies has recruitment
+continued progress and operation of the organization.Verscend Technologies has recruitment
 policies for both students and professionals. Students are recruited as interns while professionals or pass out
 students are hired for jobs. And all these actions are carried out by Human Resource Department. The
 following are the steps in the company for recruitment and selection of manpower:
