--- a/major_midterm_report/midterm_report.tex
+++ b/major_midterm_report/midterm_report.tex
@@ -89,7 +89,7 @@
 			\hline
 			A&Personality DataSet Analysis&-&1\\
 			\hline
-			B&Feature Extraction from Personality DataSet&A&2\\
+			B&Feature Extraction from Personality DataSet&A&3\\
 			\hline
 			C&Personality Analysis Model&B&4\\
 			\hline
@@ -108,7 +108,29 @@
 
 		\end{tabular}
 	\end{center}
+	\cleardoublepage
+	\subsection{Task Evaluation}
+		\subsubsection{Task Completed}
+		\begin{enumerate}
+		\item Personality DataSet Analysis
+		\item Feature Extraction from Personality DataSet
+		\item Personality Analysis Model
+		\end{enumerate}
+
+		\subsubsection{Task Remaining}
+		\begin{enumerate}
+		\item User Social Media Information Extraction
+		\item User Personality Analysis
+		\item Music DataSet Analysis
+		\item Feature Extraction from Music DataSet
+		\item Recommendation Model
+		\item Testing and Debugging
+		\end{enumerate}
       \subsection{Schedule Analysis}
+      \begin{figure}[ht!]
+	      \includegraphics[width=450px]{aschedule.png}
+	      \caption{Activity of Node Diagram of Project}
+	\end{figure}
       \subsection{Budget Analysis}
       \subsection{Scope Analysis}
       \subsection{Process Analysis}
